--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"typescript": "^5.4.2"
 	},
 	"devDependencies": {
+		"@iconify-json/mdi": "^1.1.64",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/typography": "^0.5.10",
 		"@typescript-eslint/parser": "^7.1.1",
